--- a/vick-by-nextjs-mui/package.json
+++ b/vick-by-nextjs-mui/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^6.1.0",
     "@mui/styled-engine-sc": "^6.1.0",
     "@mui/x-data-grid": "^7.17.0",
+    "@toolpad/core": "^0.6.0",
     "next": "^14.2.12",
     "react": "^18",
     "react-dom": "^18",
